# IncunabuLM

./: .dockerignore  .gitignore  IncunabuLM.ipynb  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml
.ipynb_checkpoints/: IncunabuLM-checkpoint.ipynb
data/: Poezja religijna.txt  Poezja swiecka.txt  polish_poems_finetunning.txt
data/KorpusSt/: BZ3w.xml  EwZam3w.xml  Fl3win.xml  Gn3w.xml  Ksw3w.xml  ListTat3w.xml  MW3w.xml  Naw3w.xml  OrtMac3w.xml  OrtOssol3w.xml  Pul3w.xml  R_XXII_230ľ3183w.xml  Rozm2u.xml  Sul3w.xml  blaz3w.xml  dzial3w.xml  piesni3w.xml
data/KorpusSt_Out/: BZ3w.txt  EwZam3w.txt  Fl3win.txt  Gn3w.txt  Ksw3w.txt  ListTat3w.txt  MW3w.txt  Naw3w.txt  OrtMac3w.txt  OrtOssol3w.txt  Pul3w.txt  R_XXII_230ľ3183w.txt  Rozm2u.txt  Sul3w.txt  blaz3w.txt  dzial3w.txt
data_train/: data_final.txt
docker/: dockerfile.streamlit
src/: model.py
tokenizer/: bpe_tokenizer.json
utilis/: combine_txts.py  get_finetuning_poems.py  get_training_data.py  shuffle_dataset.py  style.css  tmp.py  xml_to_txt.py
