[project]
name = "incunabulm"
version = "0.1.0"
description = "Language model trained on polish texts (lectures) and finetuned on medival poetry with Streamlit interface."
authors = [
    {name = "sztyberj",email = "sztybix@gmail.com"}
]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.api.dependencies]
pydantic = ">=2.11.7,<3.0.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
tokenizers = ">=0.21.2,<0.22.0"
torch = {version = ">=2.5.1,<3.0.0", source = "pytorch_cuda"}

[tool.poetry.group.frontend.dependencies]
streamlit = ">=1.47.0,<2.0.0"
requests = ">=2.32.3"
